=== HEAD

* Add Database#extension and Dataset#extension for loading extension modules into objects automatically (jeremyevans)

* Respect an existing dataset limit when updating on Microsoft SQL Server (jeremyevans)

* Add pg_range extension, for dealing with PostgreSQL 9.2+ range types (jeremyevans)

* Make pg_array extension convert array members when typecasting Array to PGArray (jeremyevans)

* Make jdbc/postgres adapter convert array type elements (e.g. date[] arrays are returned as arrays of Date instances) (jeremyevans)

* Make the pg_inet extension handle inet[]/cidr[]/macaddr[] types when used with the pg_array extension (jeremyevans)

* Make the pg_json extension handle json[] type when used with the pg_array extension (jeremyevans)

* Fix schema parsing of h2 clob types (jeremyevans)

* Make the pg_array extension handle array types for scalar types handled by the native postgres adapter (jeremyevans)

* Generalize handling of array types in the pg_array extension, allowing easy support of custom array types (jeremyevans)

* Remove type conversion of int2vector and money types on PostgreSQL, since previous conversions were wrong (jeremyevans)

* Add eval_inspect extension, which makes Sequel::SQL::Expression#inspect attempt to return a string suitable for eval (jeremyevans)

* When emulating offset with ROW_NUMBER, default to ordering by all columns if no specific order is given (stnoonan, jeremyevans) (#490)

* Work around JRuby 1.6 ruby 1.9 mode bug in Time -> SQLTime conversion (jeremyevans)

=== 3.36.1 (2012-06-01)

* Fix jdbc adapter when DriverManager#getConnection fails (aportnov) (#488)

=== 3.36.0 (2012-06-01)

* Use Bignum generic type when dumping unsigned integer types that could potentially overflow 32-bit signed integer values (stu314)

* Support :transform option in the nested_attributes plugin, for automatically preprocessing input hashes (chanks)
